# simple-evals-ru

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: stats.json
data/benches/: bbh.jsonl  bbh_prompts.json  gpqa.jsonl  humaneval.jsonl  math.jsonl  mbpp.jsonl  mgsm.jsonl  mmlu.jsonl  simpleqa.jsonl
data/results/bbh/: 01_gemini_flash_1_5.jsonl  02_llama_3_2_1b.jsonl  03_llama_3_2_3b.jsonl  04_llama_3_1_8b.jsonl  05_llama_3_3_70b.jsonl  06_qwen_2_5_7b.jsonl  07_yandexgpt_4_lite.jsonl  08_gigachat_lite.jsonl  09_yandexgpt_3_lite.jsonl  10_llama_3_1_8b.jsonl  11_yandexgpt_4_pro.jsonl  12_gigachat_pro.jsonl  13_llama_3_3_70b.jsonl  14_gigachat_max.jsonl  15_qwen_2_5_72b.jsonl  16_deepseek_v3.jsonl  17_yandexgpt_5_pro.jsonl  18_cotype_nano.jsonl  19_t_lite.jsonl  20_t_pro.jsonl  21_saiga.jsonl  22_vikhr.jsonl  23_saiga.jsonl  24_ruadapt.jsonl  (+6 more)
data/tasks/: bbh.json  bbh_prompts.json  bbh_sample.json  gsm8k.json  humaneval.json  math_500.json  mgsm.json  mgsm_ru.json  mmlu_pro_sample.json  simpleqa_mini.json  simpleqa_sample.json
errors/bbh/: 01_gemini_flash_1_5.md  02_llama_3_2_1b.md  03_llama_3_2_3b.md  04_llama_3_1_8b.md  05_llama_3_3_70b.md  06_qwen_2_5_7b.md  07_yandexgpt_4_lite.md  08_gigachat_lite.md  09_yandexgpt_3_lite.md  10_llama_3_1_8b.md
errors/humaneval/: 01_gemini_flash_1_5.md  02_llama_3_2_1b.md  03_llama_3_2_3b.md  04_llama_3_1_8b.md  05_llama_3_3_70b.md  06_qwen_2_5_7b.md  07_yandexgpt_4_lite.md  08_gigachat_lite.md  09_yandexgpt_3_lite.md  10_llama_3_1_8b.md
errors/math/: 01_gemini_flash_1_5.md  02_llama_3_2_1b.md  03_llama_3_2_3b.md  04_llama_3_1_8b.md  05_llama_3_3_70b.md  06_qwen_2_5_7b.md  07_yandexgpt_4_lite.md  08_gigachat_lite.md  09_yandexgpt_3_lite.md  10_llama_3_1_8b.md
errors/mgsm/: 01_gemini_flash_1_5.md  02_llama_3_2_1b.md  03_llama_3_2_3b.md  04_llama_3_1_8b.md  05_llama_3_3_70b.md  06_qwen_2_5_7b.md  07_yandexgpt_4_lite.md  08_gigachat_lite.md  09_yandexgpt_3_lite.md  10_llama_3_1_8b.md
errors/mmlu/: 01_gemini_flash_1_5.md  02_llama_3_2_1b.md  03_llama_3_2_3b.md  04_llama_3_1_8b.md  05_llama_3_3_70b.md  06_qwen_2_5_7b.md  07_yandexgpt_4_lite.md  08_gigachat_lite.md  09_yandexgpt_3_lite.md  10_llama_3_1_8b.md
errors/simpleqa/: 01_gemini_flash_1_5.md  02_llama_3_2_1b.md  03_llama_3_2_3b.md  04_llama_3_1_8b.md  05_llama_3_3_70b.md  06_qwen_2_5_7b.md  07_yandexgpt_4_lite.md  08_gigachat_lite.md  09_yandexgpt_3_lite.md  10_llama_3_1_8b.md
scripts/: plot_parallel.py  plot_rose.py  plot_scatter_cost_score.py  plot_scatter_cost_score1.py  plot_scatter_cost_score2.py  prep_benches.py  readme_update.py  report_errors.py  report_results.py  run_benches.py  stats_update.py
scripts/benches/: bbh.py  humaneval.py  math_.py  mgsm.py  mmlu.py  simpleqa.py
scripts/tasks/: bbh.py  humaneval.py  math_.py  math_500.py  mgsm.py  mmlu.py  simpleqa.py
simple/: registry.py
simple/benches/: bbh.py  gpqa.py  humaneval.py  math.py  mbpp.py  mgsm.py  mmlu.py  simpleqa.py
simple/clients/: common.py  e2b.py  gigachat.py  openrouter.py  runpod.py  yandexgpt.py
tests/: test_e2b.py  test_gigachat.py  test_openrouter.py  test_runpod.py  test_yandexgpt.py
(+510 files in other folders)
