[project]
name = "simple-evals-ru"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "matplotlib>=3.10.0",
]

[tool.ruff]
# Group violations by containing file.
output-format = "concise"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "E501",  # Line is too long
    "D",  # Missing docstring
    "I",  # Import block is un-sorted
    "ANN",  # Missing type annotation
    "ERA001",  # Found commented-out code
    "RET503",  # Missing explicit `return`
    "COM812",  # Trailing comma missing
    "S101",  # Use of `assert` detected
    "TRY400",  # Use `logging.exception` instead of `logging.error
    "UP031",  # Use format specifiers instead of percent format
    "ASYNC109",  # Async function definition with a `timeout` parameter
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py
    "CPY001",  # Missing copyright notice
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant
    "B905",  # `zip()` without an explicit `strict
]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "ruff>=0.9.5",
]
