[project]
name = "simple-evals-ru"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "aiohttp>=3.11.12",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["simple"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

asyncio_mode = "auto"
# https://github.com/pytest-dev/pytest-asyncio/issues/924
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Group violations by containing file
output-format = "concise"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "E501",  # Line is too long
    "D",  # Missing docstring
    "I",  # Import block is un-sorted
    "ANN",  # Missing type annotation
    "ERA001",  # Found commented-out code
    "RET503",  # Missing explicit `return`
    "COM812",  # Trailing comma missing
    "S101",  # Use of `assert` detected
    "TRY400",  # Use `logging.exception` instead of `logging.error
    "UP031",  # Use format specifiers instead of percent format
    "ASYNC109",  # Async function definition with a `timeout` parameter
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py
    "CPY001",  # Missing copyright notice
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant
    "B905",  # `zip()` without an explicit `strict
    "PERF401",  # Use `list.extend` to create a transformed list
    "PLR0913",  # Too many arguments in function definition
    "C901",  # `main` is too complex"
    "PLR0912",  # Too many branches
    "RET502",  # [*] Do not implicitly `return None
    "PLR0915",  # Too many statements
    "T201",  # `print` found
    "NPY002",  # Replace legacy `np.random.choice
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
